@@ -1,0 +1,36 @@
+<!DOCTYPE HTML>
+<html lang="ja"><head>
+<meta charset="utf-8">
+<title>Chart sample - Raphael</title>
+<style>
+header { border-bottom: solid 1px gray; }
+footer { border-top: solid 1px gray; }
+section { text-align: center; }
+#chart-path {
+		margin:auto;
+		width: 500px;
+		text-align: left;
+		font-size: 12px;
+		font-family: monospace;
+		line-height: 1.5em;
+}
+</style>
+</head><body>
+<div id="container">
+<header>
+<h1>Raphael chart sample</h1>
+</header>
+<section>
+<div id="chart-screen"></div>
+<div id="chart-path"></div>
+</section>
+<footer>
+<a href="http://raphaeljs.com/chart.html">Raphael demo page</a>
+</footer>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script>!window.jQuery && document.write('<script src="/static/jquery.min.js"><\/script>')</script>
+<script type="text/javascript" src="/static/raphael.min.js"></script>
+<script type="text/javascript" src="simple-usage-raphael-chart.js"></script>
+<!-- vim: set noet sw=2 ts=2 fileencoding=utf-8 : -->
+</body></html>
